nullaway_error_ccf75f7e-f65e-4cee-b8ce-5f5b61ddd3f3.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/xml/MapImage.java:52: error: [NullAway] initializer method does not guarantee @NonNull field absolutePath (line 35) is initialized along all control-flow paths (remember to check for exceptions or early returns).
  public MapImage(MapImage original) {
         ^
    (see http://t.uber.com/nullaway )
